--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,8 +1,10 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#myReadmeNavbar" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>                       
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myReadmeNavbar" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                    
       </button>
       <a class="navbar-brand" href="/" style="margin-top: 2px; margin-bottom: 3px">PreStage QA README</a>
     </div>
