--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,16 +6,16 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                    
       </button>
-      <a class="navbar-brand" href="/" style="margin-top: 2px; margin-bottom: 3px">PreStage QA README</a>
+      <a class="navbar-brand" href="{{ '/' | relative_url }}" style="margin-top: 2px; margin-bottom: 3px">PreStage QA README</a>
     </div>
     <div class="collapse navbar-collapse" id="myReadmeNavbar" style="margin-top: 2px">
       <ul class="nav navbar-nav">
-        <li><a class="nav-item nav-link {% if page.title == 'Getting Started' %}active{% endif %}" href="#">Home</a></li>
-        <li><a class="nav-item nav-link {% if page.title == 'Revision History' %}active{% endif %}" href="#">Revision History</a></li>
-        <li><a class="nav-item nav-link {% if page.title == 'Some Basic Info' %}active{% endif %}" href="#">Some Basic Info</a></li>
-        <li><a class="nav-item nav-link {% if page.title == 'Nice to Know' %}active{% endif %}" href="#">Nice to Know</a></li>
+        <li><a class="nav-item nav-link {% if page.title == 'Getting Started' %}active{% endif %}" href="{{ '/' | relative_url }}">Home</a></li>
+        <li><a class="nav-item nav-link {% if page.title == 'Revision History' %}active{% endif %}" href="{{ '/' | relative_url }}">Revision History</a></li>
+        <li><a class="nav-item nav-link {% if page.title == 'Some Basic Info' %}active{% endif %}" href="{{ '/' | relative_url }}">Some Basic Info</a></li>
+        <li><a class="nav-item nav-link {% if page.title == 'Nice to Know' %}active{% endif %}" href="{{ '/' | relative_url }}">Nice to Know</a></li>
         <li class="dropdown">
-          <a class="nav-item nav-link {% if page.title == 'Check Details' %}active{% endif %}" class="dropdown-toggle" data-toggle="dropdown" href="/check-deets/">Checks <span class="caret"></span></a>
+          <a class="nav-item nav-link {% if page.title == 'Check Details' %}active{% endif %}" class="dropdown-toggle" data-toggle="dropdown" href="{{ /check-deets/ | relative_url }}">Checks <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">General</a></li>
             <li><a href="#">PACS Core</a></li>
