--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,7 +15,7 @@
         <li><a class="nav-item nav-link {% if page.title == 'Some Basic Info' %}active{% endif %}" href="{{ '/' | relative_url }}">Some Basic Info</a></li>
         <li><a class="nav-item nav-link {% if page.title == 'Nice to Know' %}active{% endif %}" href="{{ '/' | relative_url }}">Nice to Know</a></li>
         <li class="dropdown">
-          <a class="nav-item nav-link {% if page.title == 'Check Details' %}active{% endif %}" class="dropdown-toggle" data-toggle="dropdown" href="{{ /check-deets/ | relative_url }}">Checks <span class="caret"></span></a>
+          <a class="nav-item nav-link {% if page.title == 'Check Details' %}active{% endif %}" class="dropdown-toggle" data-toggle="dropdown" href="{{ /Check Details/ | relative_url }}">Checks <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">General</a></li>
             <li><a href="#">PACS Core</a></li>
