--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myReadmeNavbar" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myReadmeNavbar" aria-controls="myReadmeNavbar" aria-expanded="false" aria-label="Toggle navigation">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                    
@@ -15,7 +15,7 @@
         <li><a class="nav-item nav-link {% if page.title == 'Some Basic Info' %}active{% endif %}" href="{{ '/' | relative_url }}">Some Basic Info</a></li>
         <li><a class="nav-item nav-link {% if page.title == 'Nice to Know' %}active{% endif %}" href="{{ '/' | relative_url }}">Nice to Know</a></li>
         <li class="dropdown">
-          <a class="nav-item nav-link {% if page.title == 'Check Details' %}active{% endif %}" class="dropdown-toggle" data-toggle="dropdown" href="{{ /Check Details/ | relative_url }}">Checks <span class="caret"></span></a>
+          <a class="nav-item nav-link {% if page.title == 'Check Details' %}active{% endif %}" class="dropdown-toggle" data-toggle="dropdown" href="{{ /check-deets/ | relative_url }}">Checks <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">General</a></li>
             <li><a href="#">PACS Core</a></li>
