--- a/_includes/check-section.html
+++ b/_includes/check-section.html
@@ -2,11 +2,11 @@
   {% assign check-sections = site.check-section | where:"check-section-id", include.check-section-id %}
 {% endif %}
 
-{% for check-section in check-sections %}
+{% for check in check-sections %}
   {% if include.type != "check-section-sub" %}
-    <h2>{{ check-section.title }}</h2>
+    <h2>{{ check.title }}</h2>
   {% elsif include.type == "check-section-sub" %}
-    ### {{ check-section.title }}
+    ### {{ check.title }}
   {% endif %}
-  {{ check-section.content }}
+  {{ check.content }}
 {% endfor %}
