--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,9 +1,9 @@
 <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
-<!-- Setup theme-color {% include head-custom-theme-colors.html %} -->
+<!-- Setup theme-color customise your own _includes/head-custom-theme-colors.html  -->
 
-<!-- Setup Google Analytics {% include head-custom-google-analytics.html %} -->
+<!-- Setup Google Analytics customise your own _includes/head-custom-google-analytics.html  -->
 
 <!-- You can set your favicon here -->
 <!-- link rel="shortcut icon" type="image/x-icon" href="{{ '/favicon.ico' | relative_url }}" -->
