changed from data-bs-theme="dark" to navbar-dark

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md bg-dark-subtle" data-bs-theme="dark">
+<nav class="navbar navbar-expand-md bg-dark navbar-dark"> <!--data-bs-theme="dark" does not support light toggle icon-->
   <div class="container-fluid">
     <a class="navbar-brand" href="{{ '/' | relative_url }}" style="margin-top: 2px; margin-bottom: 3px">PreStage QA
       README</a>
