updated to add jquery and bootstrap-toc https://afeld.github.io/bootstrap-toc/

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 
-<!-- for auto generated contents and anchor links-->
+<!-- for auto generated anchor links-->
 <script src="https://cdn.jsdelivr.net/npm/anchor-js/anchor.min.js"></script>
 <script>
   anchors.options = {
@@ -19,3 +19,8 @@
   };
   anchors.add('h1, h2, h3, h4, h5').remove('.no-anchor');
 </script>
+
+<!-- for auto generated TOC-->
+<!--https://afeld.github.io/bootstrap-toc/-->
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.min.js"></script>
+<script src="https://cdn.rawgit.com/afeld/bootstrap-toc/v1.0.1/dist/bootstrap-toc.min.js"></script>
