--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
   {% include head-custom.html %}
 </head>
 
-<body data-spy="scroll" data-target="#toc">
+<body data-bs-spy="scroll" data-bs-target="#toc">
   <a id="skip-to-content" href="#content">Skip to the content.</a>
 
   <header class="page-header" role="banner">
