--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
   <a id="skip-to-content" href="#content">Skip to the content.</a>
 
   <header class="page-header" role="banner">
-    <h1 class="project-name no-anchor" data-toc-skip">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
+    <h1 class="project-name no-anchor" data-toc-skip>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
     <p class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline
       }}</p>
     {% if site.github.is_project_page %}
